--- a/index.html
+++ b/index.html
@@ -1,34 +1,166 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>GEOG 485L - My First Map</title>
-		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css">
-		<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
-	</head>
-	<body>
-		<p>My first map will appear here:</p>
-		<div id="map-id" style="height:400px; width:600px"></div>
-		<script>
-		/* Bandelier Hall East lat/long: 35.0843N, -106.6241W
-			 -> changed to ECE building 35.0831N, -106.6245W
-		   create a map variable "myMap" that points to the map placed in the map <div>
-			 zoom the view on Bandelier Hall East building at a zoom 17 level */
-		var myMap = L.map('map-id').setView([35.0831, -106.6245], 17);
+<html lang="en">
 
-		// create variable named osm that is used to hold OpenStreetMap tile layer
-		var osm = new L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
+<head>
+	<meta charset="utf-8">
+	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-		// add the OpenStreetMap tile layer (i.e the "osm" variable) to the map
-		osm.addTo(myMap);
+	<title>Personal Website</title>
 
-		// add marker on the tile layer
-		var marker = L.marker([35.0831, -106.6245]).addTo(myMap);
+	<!-- Google Fonts -->
+	<link rel="stylesheet"
+		href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i">
 
-		// add popup; usually used when you want to attach some information to a particular object on a map
-		marker.bindPopup("<b>Hello World!</b> <br><i>Electrical and Computer Engineering Department</i><br>University of New Mexico").openPopup();
-		/* <b> used to bold text
-			 <br> used for newline
-			 <i> used to italicize text */
-		</script>
-	</body>
+	<!-- libraries -->
+	<link rel="stylesheet" href="libraries/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="libraries/icofont/icofont.min.css">
+	<link rel="stylesheet" href="libraries/boxicons/css/boxicons.min.css">
+
+	<!-- styles -->
+	<link rel="stylesheet" href="styles/styles.css">
+
+</head>
+
+<body>
+	<!-- header -->
+	<header id="header">
+		<div class="d-flex flex-column">
+
+			<div class="profile">
+				<img src="" alt="" class="img-fluid rounded-circle">
+				<h1 class="text-light"><a href="index.html">Andrew Zhang</a></h1>
+				<div class="social-links mt-3 text-center">
+					<a href="#" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+					<a href="https://github.com/Cutherean" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+				</div>
+			</div>
+
+			<nav class="nav-menu">
+				<ul>
+					<li><a href="index.html"><i class="bx bx-home"></i><span>Home</span></a></li>
+					<li><a href="#about"><i class="bx bx-user"></i><span>About</span></a></li>
+					<li><a href="#CV"><i class="bx bx-file-blank"></i><span>CV</span></a></li>
+					<li><a href="#projects"><i class="bx bx-book-content"></i>Personal Projects</a></li>
+					<li><a href="#contact"><i class="bx bx-envelope"></i>Contact</a></li>
+
+				</ul>
+			</nav>
+			<button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
+
+		</div>
+	</header>
+
+	<!-- hero -->
+	<section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+		<div class="hero-container">
+			<h1>Andrew Zhang</h1>
+			<p>Welcome to my personal website</p>
+		</div>
+	</section>
+
+	<main id="main">
+		<!-- about -->
+		<section id="about" class="about">
+			<div class="container">
+				<div class="section-title">
+					<h2>About</h2>
+					<p>filler text. not sure what to put yet</p>
+				</div>
+			</div>
+		</section>
+
+		<!-- CV -->
+		<section id="CV" class="CV">
+			<div class="container">
+
+				<div class="section-title">
+					<h2>CV</h2>
+				</div>
+
+				<div class="embed-responsive">
+					<object data="" type="application/pdf"></object>
+				</div>
+			</div>
+		</section>
+
+		<!-- projects -->
+		<section id="projects" class="projects section-bg">
+			<div class="container">
+
+				<div class="section-title">
+					<h2>Personal Projects</h2>
+				</div>
+
+				<div class="row projects-container">
+					<div class="col-lg-4 col-md-6 project-item">
+						<div class="card h-100">
+							<div class="card-body d-flex flex-column">
+								<h5 class="card-title">Internet Usage: 1960-2020</h5>
+								<p class="card-text">Interactive web map showing Internet usage from 1960 to 2020 made for my GEOG485
+									class.</p>
+								<a href="#" target="_blank" class="btn btn-primary mt-auto">Link to app</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 project-item">
+						<div class="card h-100">
+							<div class="card-body d-flex flex-column">
+								<h5 class="card-title">Microgrid</h5>
+								<p class="card-text">Embedded systems project for my Senior Design class Project.</p>
+								<a href="https://github.com/Cutherean/microgrid" target="_blank" class="btn btn-primary mt-auto">Link to
+									repo</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 project-item">
+						<div class="card h-100">
+							<div class="card-body d-flex flex-column">
+								<h5 class="card-title">Project Title Filler</h5>
+								<p class="card-text">Project description filler.</p>
+								<a href="#" target="_blank" class="btn btn-primary mt-auto">Link to app</a>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</section>
+
+		<!-- contact info -->
+		<section id="contact" class="contact">
+			<div class="container">
+				<div class="section-title">
+					<h2>Contact</h2>
+				</div>
+
+				<div class="info">
+					<div class="email">
+						<i class="icofont-envelope"></i>
+						<h4>Email:</h4>
+						<p>ajzhang1998@gmail.com</p>
+					</div>
+
+					<div class="phone">
+						<i class="icofont-phone"></i>
+						<h4>Call:</h4>
+						<p>+1 (505) 412 - 3928</p>
+					</div>
+				</div>
+				
+			</div>
+		</section>
+	</main>
+
+	<!-- footer -->
+	<footer id="footer">
+		<div class="container">
+			<div class="credits">
+				Design referenced from <a
+					href="https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/">BootstrapMade</a>
+			</div>
+		</div>
+	</footer>
+</body>
 </html>
