added web map to site

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<img src="images/pfp.png" alt="" class="img-fluid rounded-circle">
 				<h1 class="text-light"><a href="index.html">Andrew Zhang</a></h1>
 				<div class="social-links mt-3 text-center">
-					<a href="https://www.linkedin.com/in/andy-zhang-b486a8236/" target="_blank" class="linkedin"><i
+					<a href="https://www.linkedin.com/in/ajzhang98" target="_blank" class="linkedin"><i
 							class="bx bxl-linkedin"></i></a>
 					<a href="https://github.com/Cutherean" target="_blank" class="github"><i class="bx bxl-github"></i></a>
 				</div>
@@ -104,7 +104,7 @@
 								<h5 class="card-title">Internet Usage: 1960-2020</h5>
 								<p class="card-text">Interactive web map showing Internet usage from 1960 to 2020 made for my GEOG485
 									class.</p>
-								<a href="#" target="_blank" class="btn btn-primary mt-auto">Link to app</a>
+								<a href="myWebApp/index.html" target="_blank" class="btn btn-primary mt-auto">Link to app</a>
 							</div>
 						</div>
 					</div>
